--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h1>🔧 End-to-End Service Management — MVP</h1>
   <div class="api-box">
     <label for="apiUrl" style="font-size:12px;color:#a9b7c4">API URL</label>
-    <input id="apiUrl" placeholder="http://3.105.229.165:8000" />
+    <input id="apiUrl" placeholder="http://3.106.215.78:8000" />
     <button class="btn" id="saveApiBtn">Save</button>
   </div>
 </header>
@@ -85,7 +85,7 @@
       </div>
     </div>
     <h3>Status</h3>
-    <pre id="statusOut">{}</pre>
+    <pre id="statusOut"></pre>
     <h3>Ask a question</h3>
     <div class="row"><input id="q" placeholder="What's my ETA?" /><button class="btn" id="askBtn">Ask</button></div>
     <pre id="chatOut"></pre>
@@ -163,15 +163,24 @@
 
   // STATUS
   jobId.value = localStorage.getItem('LAST_JOB_ID') || '';
-  document.getElementById('statusBtn').onclick = async () => {
-    try{
-      const base = API(); if(!base) return alert('Set API URL first.');
-      const id = jobId.value.trim() || localStorage.getItem('LAST_JOB_ID');
-      if(!id) return alert('Enter a Job ID.');
-      const r = await fetch(`${base}/status/${encodeURIComponent(id)}`);
-      statusOut.textContent = j(await r.json());
-    } catch(err){ statusOut.textContent = err.message; }
-  };
+document.getElementById('statusBtn').onclick = async () => {
+  try {
+    const base = API();
+    if (!base) return alert('Set API URL first.');
+
+    const id = jobId.value.trim() || localStorage.getItem('LAST_JOB_ID');
+    if (!id) return alert('Enter a Job ID.');
+
+    // Force HTML/text fetch instead of JSON
+    const r = await fetch(`${base}/status/${encodeURIComponent(id)}?format=html`);
+    const html = await r.text();
+
+    // Render the HTML in the status output container
+    statusOut.innerHTML = html;
+  } catch (err) {
+    statusOut.textContent = err.message;
+  }
+};
 
   document.getElementById('askBtn').onclick = async () => {
     try{
